# watermelon

./: .gitignore  AGENTS.md  CODING_GUIDELINES.md  README.md  components.json  drizzle.config.ts  electrobun.config.ts  eslint.config.mjs  package.json  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts  vitest.config.ts
.catpaw/specs/theme-system-refactoring/: design.md  requirements.md  tasks.md
.catpaw/specs/todo-app/: design.md  requirements.md  tasks.md
.github/workflows/: release.yml
artifacts/: canary-macos-arm64-update.json
scripts/: build-all.sh  build-x64.sh  post-build.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: category.rs  data.rs  mod.rs  note.rs  notification.rs  search.rs  statistics.rs  tag.rs  task.rs
src-tauri/src/utils/: mod.rs  recurrence.rs
src/bun/: index.ts
src/bun/db/: index.ts  schema.ts
src/bun/services/: category.service.ts  data.service.ts  notification.service.ts  search.service.ts  statistics.service.ts  tag.service.ts  task.service.ts
src/bun/utils/: mappers.ts
src/main/: index.ts
src/main/db/: index.ts  schema.ts
src/main/ipc/: handlers.ts
src/main/services/: category.service.ts  (+6 more)
src/mainview/: App.tsx  env.d.ts  index.css  index.html  main.tsx  rpc.ts
src/preload/: index.d.ts  index.ts
src/renderer/: index.html
src/shared/: ipc-channels.ts  rpc-schema.ts  types.ts
(+97 files in other folders)
